--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+	 	<link rel="stylesheet" href="./logoanimation.css"> 
+
 <meta charset="UTF-8">
 <title>MAZIN ZAKARIA</title>
 
@@ -18,6 +20,6 @@ h1{
 </head>
 
 <body>
-<h1> MAZIN ZAKARIA</h1>
+        <object data="./mazinzakarialogo.svg" type="image/svg+xml"></object>
 </body>
 </html>
