--- a/test.html
+++ b/test.html
@@ -1,10 +1,8 @@
 <!doctype html>
 <html>
 <head>
-
 <meta charset="UTF-8">
-<title>MAZIN ZAKARIA</title>
-
+<title>Untitled Document</title>
 <style>
 html, body{
         margin: 0px;
@@ -13,7 +11,10 @@ html, body{
 		
 	
 }
-
+body{
+	background-color:#fff;
+	
+}
 h1{
 	font-size:34px;
 	font-family:"Oak";
@@ -28,8 +29,6 @@ h1{
 
 	margin-left:auto;
 	margin-right:auto;
-	width:100%;
-	height:100%;
 	
 	
 	
@@ -40,7 +39,9 @@ h1{
 </head>
 
 <body>
-        <object width="960" height="540" data="./mazinzakarialogo.svg" type="image/svg+xml"></object>
+<div id="logocontainer">
+        <object width="480" height="270" data="./mazinzakarialogo.svg" type="image/svg+xml"></object>
 
+	</div>
 </body>
 </html>
