--- a/test.html
+++ b/test.html
@@ -7,7 +7,6 @@
 html, body{
         margin: 0px;
 	     height: 100%;
-		 
 		
 	
 }
@@ -29,19 +28,58 @@ h1{
 
 	margin-left:auto;
 	margin-right:auto;
-	
+
 	
 	
 }
 
+.underline{
+	height:6px;
+	width:80px;
+	background-color:#000;
+}
+#container{
+	width:480px;
+	height:270px;
+	margin:0;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:200px;
+
+}
+#firstDiv{
+	width:100%;	
+	height:100%;
+	background-color:#222222;
+
+}
+
+#mainDiv{
+	width:100%;
+	height:100%;
+	background-color:#fff;	
+}
 
 </style>
+<link rel="stylesheet" type="text/css" href="css/default.css" />
+<link rel="stylesheet" type="text/css" href="css/multilevelmenu.css" />
+<link rel="stylesheet" type="text/css" href="css/component.css" />
+<link rel="stylesheet" type="text/css" href="css/animations.css" />
+<script src="js/modernizr.custom.js"></script>
 </head>
 
 <body>
-<div id="logocontainer">
-        <object width="480" height="270" data="./mazinzakarialogo.svg" type="image/svg+xml"></object>
+<div id="pt-main" class="pt-perspective">
 
-	</div>
+	<div id="firstDiv" class="pt-page pt-page-1">
+		<div id="container">
+        <object data="./mazinzakarialogo.svg" type="image/svg+xml">
+        </object>
+		</div>
+    </div>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="js/jquery.dlmenu.js"></script>
+<script src="js/pagetransitions.js"></script>
 </body>
 </html>
