--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ html, body{
 		 padding:0;
 }
 body{
-	background-color:#fff;
+	background-color:#f7f7f7;
 	
 }
 h1{
@@ -65,7 +65,7 @@ h1{
 #mainDiv{
 	width:100%;
 	height:100%;
-	background-color:#fff;	
+	background-color:#f7f7f7;	
 	position:absolute;
 		z-index:5;
 	top:0;
@@ -80,6 +80,28 @@ h1{
 	height:59p;
 	position:absolute;
 	
+}
+
+#about {
+	z-index:6;
+	position:absolute;
+	width:100%;
+	height:100%;
+	background-color:#fff;
+    -webkit-transform: skewY(-5deg);
+    -moz-transform: skewY(-5deg);
+    -ms-transform: skewY(-5deg);
+    -o-transform: skewY(-5deg);
+    transform: skewY(-5deg);
+}
+
+/* And the child another way */
+.skew-pos {
+    -webkit-transform: skewY(5deg);
+    -moz-transform: skewY(5deg);
+    -ms-transform: skewY(5deg);
+    -o-transform: skewY(5deg);
+    transform: skewY(5deg);
 }
 
 @-webkit-keyframes moveToTop {
@@ -105,6 +127,24 @@ h1{
 	
 	-webkit-animation: moveToToop .003s ease both;
 	animation: moveToTopp .003s ease both;
+}
+
+.rotate {
+-webkit-animation: cssAnimation 1.0473s 4 forwards;
+-moz-animation: cssAnimation 1.0473s 4 forwards;
+-o-animation: cssAnimation 1.0473s 4 forwards;
+}
+@-webkit-keyframes cssAnimation {
+from { -webkit-transform: rotate(180deg) scale(1) skew(-23deg) translate(0px); }
+to { -webkit-transform: rotate(162deg) scale(1) skew(-23deg) translate(0px); }
+}
+@-moz-keyframes cssAnimation {
+from { -moz-transform: rotate(180deg) scale(1) skew(-23deg) translate(0px); }
+to { -moz-transform: rotate(162deg) scale(1) skew(-23deg) translate(0px); }
+}
+@-o-keyframes cssAnimation {
+from { -o-transform: rotate(180deg) scale(1) skew(-23deg) translate(0px); }
+to { -o-transform: rotate(162deg) scale(1) skew(-23deg) translate(0px); }
 }
 
 </style>
@@ -139,6 +179,14 @@ h1{
         </object>
         </div>
     </div>
+    <div id="about" class="rotate">
+    <div class="skew-pos">
+        <p>Hello World.</p>
+        <p>@jonathansampson.</p>
+        <p>This box is skewed.</p>
+        <p>In supported browsers.</p>
+    </div>
+</div>
 <!--</div>-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="js/jquery.dlmenu.js"></script>
@@ -179,7 +227,8 @@ $('body').delay(3200).queue(function(){
 		setTimeout(function(){
 
         $('#logoOverlay').addClass('pt-page-moveToTopp').clearQueue();
- 		
+  		$('html, body').css( "overflow", "visible" );
+
 		},150);
     });
 });
