--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ html, body{
 		 padding:0;
 }
 body{
-	background-color:#f7f7f7;
+	background-color:#fff; /*f7f7f7*/
 	
 }
 h1{
@@ -64,8 +64,8 @@ h1{
 
 #mainDiv{
 	width:100%;
-	height:100%;
-	background-color:#f7f7f7;	
+	height:130%;
+	background-color:#e3e3e3;	
 	position:absolute;
 		z-index:5;
 	top:0;
@@ -76,7 +76,7 @@ h1{
 	z-index:1;	
 	top:30px;
 	right:30px;
-	width:30px;
+	width:40px;
 	height:59p;
 	position:absolute;
 	
@@ -85,8 +85,9 @@ h1{
 #about {
 	z-index:6;
 	position:absolute;
-	width:100%;
+	width:130%;
 	height:100%;
+	left:-15%;
 	background-color:#fff;
     -webkit-transform: skewY(-5deg);
     -moz-transform: skewY(-5deg);
