--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ h1{
 #one p {
 	color:#474747;
 	font-family:"Gandhi Serif";
-	font-weight:400;
+	font-weight:bold;
 	/*font-size:18px;*/
-	line-height:1.5;
+	line-height:1.4;
 	letter-spacing:.5px;
 	
 }
@@ -140,7 +140,7 @@ hr {
 #aboutcontent{
 	height:60%;
 	/*width:700px;*/
-	width:50%;
+	width:40%;
 	top:0;
 	right:0;
 	z-index:8;
@@ -186,6 +186,7 @@ hr {
   overflow:hidden;
   /*border:2px dashed #ccc; DEBUG */
   min-height:170px;
+  line-height:1.5;
 }
 
 @media screen and (max-width: 400px) {
